2004-11-22  Mark Grondona <mgrondona@llnl.gov>

	* README.QsNet : Update location of libelanhosts. Describe "slurm" module.

	* src/pdsh/dsh.c (dsh) : Increase max number of open files to hard
	  limit for large fanout.

	* : tag pdsh-2-3-1
	
2004-09-21  Albert Chu <chu11@llnl.gov>

	Added large file support to pdcp (gnat pdsh/497).

	* src/pdsh/pcp_server.c (_sink): Redeclare 'size' as off_t type
	instead of integer.

	* src/pdsh/dsh.c (_rcp_sendfile): Fix typo in comments.
	
2004-09-21  Mark Grondona <mgrondona@llnl.gov>

	* configure.ac : Add AC_SYS_LARGEFILE (fix for gnat pdsh/497).

2004-07-30  Mark Grondona <mgrondona@llnl.gov>

	* : Tagged pdsh-2-2-1

2004-07-19  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/slurm.c : Allow multiple jobids to -j option.

	* doc/pdsh.1.in : Change name of mqshell/qshell modules to mqsh/qsh.

2004-06-23  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c (opt_args) : Do not abort when none of the 
	hosts in exclude_buf (i.e. -x) match the current wcoll.

	* src/common/err.c (lsd_fatal_error) : Added.

	* configure.ac : Define WITH_LSD_FATAL_ERROR_FUNC.

2004-06-09  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (_dsh_attr_init) : Added function to initialize
	pthread attr and set stacksize and detach state. 
	
	* src/pdsh/dsh.c (dsh) : Use _dsh_attr_init() instead of 
	pthread_attr_init() directly. Set stacksize argument using
	DSH_THREAD_STACKSIZE (Currently set to 128K).

	* README : Add note to look at README.QsNet for --with-qshell.

	* : Tagged pdsh-2-1-1

2004-06-01  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/qswutil.c (_qsw_cap_create) : Fix multirail loop for
	libelan3 systems to never go past ELAN_MAX_RAILS.

2004-05-28  Mark Grondona <mgrondona@llnl.gov>

	* scripts/dshbak : Use regex instead of split() to allow for
	whitespace padding in node names (suggested by Ashley Pittman
	<ashley@quadrics.com>)

2004-05-26  Mark Grondona <mgrondona@llnl.gov>
